--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <h3 class="text-primary mb-3">Xin chào, tôi là:</h3>
                         <h1 class="display-3 mb-3">Lê Quốc Huy</h1>
                         <h2 class="typed-text-output d-inline"></h2>
-                        <div class="typed-text d-none">Fresher Java Web</div>
+                        <div class="typed-text d-none">Intern Java Web</div>
                         <div class="d-flex align-items-center pt-5">
                             <a
                                 href="https://github.com/QuocHuy248/CV-Java-Vi/raw/master/Le-Quoc-Huy-Fresher-Java-Web-CV.pdf"
@@ -148,7 +148,7 @@
                     <div class="col-lg-8 wow fadeInRight" data-wow-delay="0.1s">
                         <div class="d-flex align-items-center mb-5">
                             <div class="text-center me-4">
-                                <h5 class="mb-0">Fresher Java Web</h5>
+                                <h5 class="mb-0">Intern Java Web</h5>
                             </div>
                             <h3 class="lh-base mb-0">Lê Quốc Huy</h3>
                         </div>
@@ -180,7 +180,7 @@
                                 </p>
                                 <p class="mb-3">
                                     <i class="fas fa-id-badge text-primary me-3"></i
-                                    ><b>Vị trí ứng tuyển:</b> Fresher Java Developer
+                                    ><b>Vị trí ứng tuyển:</b> Intern Java Web
                                 </p>
                                 <p class="mb-3">
                                     <i class="fab fa-github-square text-primary me-3"></i
